Fixed overflow bug
Fixed bug where moves list was too large and went out of the designated box. Added scroll option.

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@
     height: 598px;
     font-size: 36px;
     padding-left: 33px;
+    overflow: scroll;
     background-color: #E8E8E8;
 }
 
